// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MProgress bar mode should render correctly 1`] = `
<div name="m--is" appear="" class="m-progress m--is-determinate  m--is-in-progress" style="height:6px;border-radius:3px;">
  <div class="m-progress__bar" style="width:0%;border-bottom-left-radius:3px;border-top-left-radius:3px;"></div>
</div>
`;

exports[`MProgress indeterminate mode should render correctly 1`] = `
<div name="m--is" appear="" class="m-progress m--is-indeterminate m--is-in-progress" style="height:6px;border-radius:3px;">
  <div class="m-progress__bar" style="width:0%;border-bottom-left-radius:3px;border-top-left-radius:3px;"></div>
</div>
`;

exports[`MProgress indeterminate mode should render correctly when circle 1`] = `
<div name="m--is" appear="" class="m-progress m--is-circle m--is-determinate  m--is-in-progress" style="height:100%;border-radius:initial;">
  <div class="m-progress__wrap" style="width:50px;height:50px;"><svg preserveAspectRatio="xMidYMid meet" focusable="false" viewBox="0 0 50 50" class="m-progress__draw" style="width:50px;height:50px;">
      <circle cx="50%" cy="50%" r="23" class="m-progress__background" style="stroke-dasharray:144.51326206513048px;stroke-width:4px;animation-name:m-progress-spinner-stroke-rotate-50;"></circle>
      <circle cx="50%" cy="50%" r="23" class="m-progress__circle" style="stroke-dashoffset:NaNpx;stroke-dasharray:144.51326206513048px;stroke-width:4px;animation-name:m-progress-spinner-stroke-rotate-50;"></circle>
    </svg></div>
  <div class="m-progress__slot"></div>
</div>
`;

exports[`MProgress indeterminate mode should render correctly when no border radius 1`] = `
<div name="m--is" appear="" class="m-progress m--is-determinate  m--is-in-progress" style="height:6px;border-radius:initial;">
  <div class="m-progress__bar" style="width:0%;border-bottom-left-radius:initial;border-top-left-radius:initial;"></div>
</div>
`;

exports[`MProgress indeterminate mode should render correctly when value is 100% 1`] = `
<div name="m--is" appear="" class="m-progress m--is-determinate  m--is-completed" style="height:6px;border-radius:initial;">
  <div class="m-progress__bar" style="width:100%;border-radius:initial;"></div>
</div>
`;

exports[`MProgress monochrome skin should render correctly 1`] = `
<div name="m--is" appear="" class="m-progress m--is-determinate  m--is-in-progress m--is-monochrome" style="height:6px;border-radius:3px;">
  <div class="m-progress__bar" style="width:0%;border-bottom-left-radius:3px;border-top-left-radius:3px;"></div>
</div>
`;
